- configure producer and consumer programmatically

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,26 +1,27 @@
 spring:
-  kafka:
-    bootstrap-servers: localhost:9092
-    consumer:
+    kafka:
       bootstrap-servers: localhost:9092
-      group-id: group_id
-      auto-offset-reset: earliest
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-      properties:
-        spring:
-          json:
-            trusted:
-              packages: '*'
-    producer:
-      bootstrap-servers: localhost:9092
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-      properties:
-        spring:
-          json:
-            trusted:
-              packages: '*'
+#        consumer:
+#            bootstrap-servers: localhost:9092
+#            group-id: group_id
+#            auto-offset-reset: earliest
+#            key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+#            value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+#            properties:
+#                spring:
+#                    json:
+#                        trusted:
+#                            packages: '*'
+#        producer:
+#            bootstrap-servers: localhost:9092
+#            key-serializer: org.apache.kafka.common.serialization.StringSerializer
+#            value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+#            properties:
+#                spring:
+#                    json:
+#                        trusted:
+#                            packages: '*'
 
 topics: test_topic
+group_id: group_id
 #topics: topics_message
